--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
-    "framer-motion": "^12.18.1",
+    "firebase": "^12.6.0",
+    "framer-motion": "^12.23.25",
     "motion": "^12.18.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
